# bankiru-parser

./: .env.example  README.md  bankiru-parser.service  main.py  parser.py  pyproject.toml  settings.py  tools.py
